nginx.conf updated

--- a/nginx.conf
+++ b/nginx.conf
@@ -8,5 +8,8 @@ http {
         location / {
             try_files $uri $uri/ /;
         }
+	location /KayakProject {
+		proxy_pass http://3.9.36.142:8383;	
+	}
     }
 }
