--- a/nginx.conf
+++ b/nginx.conf
@@ -9,7 +9,7 @@ http {
             try_files $uri $uri/ /;
         }
 	location /KayakProject {
-		proxy_pass http://3.9.36.142:8383;	
+		proxy_pass http:/35.176.148.54:8080;	
 	}
     }
 }
